[project]
name = "tribu-ai-social-content-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "juriel@comtor.net",email = "juriel@comtor.net"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (>=0.3.24,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "moviepy (>=2.1.2,<3.0.0)",
    "imageio (>=2.37.0,<3.0.0)",
    "decorator (>=5.2.1,<6.0.0)",
    "proglog (>=0.1.11,<0.2.0)"
]

[tool.poetry]
packages = [{include = "tribu_ai_social_content_agent", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
